[feature] Login tests added

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,11 @@
 node_modules/
 # Playwright and test reports
 reports/
+# Playwright output (screenshots, videos, traces)
+test-results/
+screenshots/
+videos/
+trace/
 # Logs
 logs
 *.log
